--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -155,24 +155,40 @@
                 <div class="col s12 center-align">
                     <h4>My CEUs</h4>
                     <hr>
-                    {{#if user.points_progress}}
+
                     <div class="progress big-bar">
                         <div class="determinate" style="width: {{user.points_progress}}%"></div>
                     </div>
-                    {{/if}}
+
                     {{#if user.points}}
                       <p>{{user.points}}/2000 points to your next CEU</p>
                     {{else}}
-                      <p><em>No points yet. <a href="/sole-create?sesh={{sesh}}">Create your first SOLE lesson plan & get points.</a></em></p>
+                        {{#if user.ceus}}
+                            <p>0/2000 points to your next CEU</p>
+                        {{else}}
+                            <p><em>No points yet. <a href="/sole-create?sesh={{sesh}}">Create your first SOLE lesson plan & get points.</a></em></p>
+                        {{/if}}
                     {{/if}}
 
                     <ul class="collection">
-                        <li class="collection-item"><div>September 2, 2016<a href="www.google.com"
-                                                                             class="secondary-content"><i
-                                class="material-icons">save_alt</i></a></div></li>
-                        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                        <li class="collection-item"><div>Alvin<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                        {{#if user.ceus}}
+                            {{#each user.ceus}}
+                                <li class="collection-item">
+                                    <div>{{this.date}}
+                                        <a href="{{this.url}}" class="secondary-content" target="_blank">
+                                            <i class="material-icons">save_alt</i>
+                                        </a>
+                                    </div>
+                                </li>
+                            {{/each}}
+                        {{else}}
+                            <li class="collection-item">
+                                <a href="/sole-create?sesh={{sesh}}">
+                                    No CEUs ... yet! Create your first SOLE lesson plan & get points.
+                                </a>
+                            </li>
+                        {{/if}}
+
                     </ul>
 
                 </div>
