--- a/views/partials/standard-picker.hbs
+++ b/views/partials/standard-picker.hbs
@@ -3,9 +3,9 @@
         <label>Subject</label>
         <select id="subject" name="subject" class="browser-default standard-picker">
             <option value="" disabled selected>Filter by subject</option>
-            <option label="AmeriCorps" value="asn.d0000003">AmeriCorps</option>
+            <!--<option label="AmeriCorps" value="asn.d0000003">AmeriCorps</option>-->
             <option label="College Now" value="asn.d0000001">College Now</option>
-            <option label="Community Health Worker Certification" value="asn.d0000002">Community Health Worker Certification</option>
+            <!--<option label="Community Health Worker Certification" value="asn.d0000002">Community Health Worker Certification</option>-->
             <option label="Dance" value="asn.d2466234">Dance</option>
             <option label="Drama/Theatre" value="asn.d2466454">Drama/Theatre</option>
             <option label="English Language Arts (Common Core)" value="asn.d10003fc">English Language Arts (Common Core)</option>
