opening summary PDF in a new window

--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -35,7 +35,8 @@
         </a>
         {{#if completed}}
             <a class="waves-effect waves-light green btn"
-               href="/soles/{{id}}/download-summary?sesh={{sesh}}">
+               href="/soles/{{id}}/download-summary?sesh={{sesh}}"
+               target="_blank">
                 Download Summary
             </a>
         {{else}}
