webb's DOK link

--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -77,8 +77,11 @@
                 <!--type of thinking-->
                 <div class="row">
                     <div class="col s12">
-                        <p>2. What type of thinking were most students using during this SOLE? <a>Learn More
-                            about Webb's Depth of Knowledge</a></p>
+                        <p>2. What type of thinking were most students using during this SOLE?
+                            <a href="http://www.aps.edu/sapr/documents/resources/Webbs_DOK_Guide.pdf" target="_blank">
+                            Learn More about Webb's Depth of Knowledge
+                        </a>
+                        </p>
                     </div>
                     <div class="col m12 l6">
                         <div class="input-field">
