WIP event trigger stuff for completing profile. related to #50

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -11,7 +11,7 @@
                 </video>
             </div>
 
-          <form id="profile-update-form" action="/profile" method="post" onkeypress="return event.keyCode != 13;">
+          <form id="profile-update-form" action="/complete-profile" method="post" onkeypress="return event.keyCode != 13;">
 
               <input type="hidden" name="sesh" value="{{profile.sesh}}">
             <div class="row">
