old code gets NIXXED

--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -64,8 +64,7 @@
                            min="30"
                            required
                            class="validate"
-                           value="{{sole.planned_duration}}"
-                            onchange="showRecommended()">
+                           value="{{sole.planned_duration}}">
                     <label for="duration">How many minutes<span class="hide-on-large-only"> is your class</span>?</label>
                     <span id="duration_helper_text" class="red-text helper-text"></span>
                 </div>
