verrrrrry WIP server.js updates for copy.  Also button on soles-add.hbs

--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -403,6 +403,9 @@
                         {{else}}Save
                         {{/if}}
                     </button>
+                    {{#if sole.id}}
+                    <button class="waves-effect waves-light bt">Copy</button>
+                    {{/if}}
                 </div>
 
 
