related to #89. adds ability to copy a sole

--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -48,6 +48,10 @@
                href="/soles/{{id}}/delete?sesh={{sesh}}">
                 <i class="material-icons">delete</i>
             </a>
+            <a class="btn-floating grey"
+               href="/soles/{{id}}/copy?sesh={{sesh}}">
+                <i class="material-icons">content_copy</i>
+            </a>
         {{/if}}
     </div>
 
