--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col s4">
+                        <div class="col s12 m6 l4">
                             <div class="card blue lighten-1">
                                 <div class="card-content center-align">
                                     <a href="/questions/y3CR4uqF6E?sesh={{sesh}}">
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col s4">
+                        <div class="col s12 m6 l4">
                             <div class="card blue lighten-1">
                                 <div class="card-content center-align">
                                     <a href="/questions/EJBeKeMefK?sesh={{sesh}}">
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col s4">
+                        <div class="col s12 m6 l4">
                             <div class="card blue lighten-1">
                                 <div class="card-content center-align">
                                     <a href="/questions/kM5lKUxfZh?sesh={{sesh}}">
