--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -26,7 +26,7 @@
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect waves-light btn" href="/sole-create?sesh={{sesh}}">Plan Lesson</a></li>
+        <li><li><a class="waves-effect waves-light btn" href="/sole-create?sesh={{sesh}}">Plan Lesson</a></li></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/profile?sesh={{sesh}}"><i class="material-icons">account_circle</i>My Profile</a></li>
         <li><a class="waves-effect" href="/soles?sesh={{sesh}}"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
@@ -39,8 +39,7 @@
         <li><a class="waves-effect" href="/history?sesh={{sesh}}" ><i class="material-icons">history</i>History of StartSOLE</a></li>
         <li><a class="waves-effect" href="/resources?sesh={{sesh}}"><i class="material-icons">assignment</i>Teacher Resources</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only hide-on-small-and-down" href="/logout"><!--<i
-        class="material-icons">exit_to_app</i>-->Logout</a></li>
+        <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only" href="/logout">Logout</a></li>
         <li><div class="divider hide-on-large-only hide-on-extra-large-only hide-on-small-and-down"></div></li>
 
         <li>
