--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -1,7 +1,7 @@
 <div class="breadcrumb-wrapper">
     <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
     <a href="/soles?sesh={{sesh}}" class="breadcrumb">My SOLEs</a>
-    <a class="breadcrumb">
+    <a class="truncate truncate-question breadcrumb">
         {{#if sole}}
             {{sole.question.question.text}}
         {{else}}
