WIP add ga event for testing

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -108,3 +108,14 @@
         <a class="modal-close waves-effect waves-green btn-flat">No Thanks</a>
     </div>
 </div>
+
+
+<script type="text/javascript">
+var message = 'testing login';
+ga('send', {
+  hitType: 'event',
+  eventCategory: 'PageViews',
+  eventAction: 'ViewByLoggedInUser',
+  eventLabel: message
+});
+</script>
