sole_organizer bug fix

--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -304,7 +304,7 @@
                      </p>
                      <p>
                        <label>
-                         <input type="checkbox" name="student_organizer">
+                         <input type="checkbox" name="sole_organizer">
                          <span>SOLE Student Organizer</span>
                        </label>
                      </p>
