--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -46,7 +46,7 @@
 
                                             </div>
                                             <div class="card-action">
-                                                <a href="#">Download</a>
+                                                <a href="files/resources/{{file}}" download>Download</a>
                                             </div>
                                         </div>
                                     </div>
