add an error message if a user tries to register with an email address that already exists. closes #119

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -39,6 +39,11 @@
             </div>
         </div>
         <div class="row">
+          <div class="col s12">
+            <div class="red-text" id="error"></div>
+          </div>
+        </div>
+        <div class="row">
             <div class="input-field col s12 center">
                 <button class="signin-db btn waves-effect red waves-light" id="login">
                   <i class="mdi-login left"></i>Register
