--- a/views/login.hbs
+++ b/views/login.hbs
@@ -108,7 +108,7 @@
         <a class="modal-close waves-effect waves-green btn-flat">No Thanks</a>
     </div>
 </div>
-
+{{> final-registration-form}}
 
 <script type="text/javascript">
 var message = 'testing login';
