--- a/views/register.hbs
+++ b/views/register.hbs
@@ -69,10 +69,7 @@
 
 
 
-<form id="final-registration-form" class="" action="/complete-profile" method="get">
-  <input type="hidden" name="sesh" id="sesh" value="">
-  <input type="hidden" name="firstname" id="firstname" value="">
-  <input type="hidden" name="lastname" id="lastname" value="">
-</form>
+{{> final-registration-form}}
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="/js/register.js"></script>
