fixed question add view to not search for questions when standards change.  Also opened up question add view to include standard search with all tags

--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -4,7 +4,7 @@
     <a class="breadcrumb">Add New</a>
 </div>
 
-
+<input type="hidden" name="showAll" value="true">
 <div class="row" style="padding-top:50px;">
     <div class="col s12 offset-m1 m10 offset-l3 l6">
         <div class="card-panel">
