--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,6 +12,10 @@
       {{/if}}
 
     </script>
+    <!--jquery - the PSL of Javascript libraries-->
+    <script async type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
