--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -8,6 +8,10 @@
         <div class="card-panel">
             <div class="row">
                 <div class="input-field col s12 m6">
+                    <input id="text-filter" type="text" class="validate">
+                    <label for="text-filter">Search by keyword</label>
+                </div>
+                <div class="input-field col s12 m6">
                     <select id="tag-filter" onchange="filterSelection()">
                         <option value="show-all" selected>Show All</option>
                         <option value="question-help">Help with Question phase</option>
@@ -25,7 +29,7 @@
             </div>
             <div class="row">
                 <div class="col l12">
-                    <div class="row">
+                    <div class="row" id="resource-cards-container">
 
                         {{#if resources}}
                             {{#each resources}}
@@ -61,7 +65,6 @@
     </div>
 </div>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script>
 
     function filterSelection() {
@@ -69,5 +72,14 @@
         $('.resource-card-col').hide();
         $('.'+tag).show();
     }
+
+    $(document).ready(function(){
+        $("#text-filter").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#resource-cards-container .resource-card-col").filter(function() {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
 
 </script>
