--- a/views/home.hbs
+++ b/views/home.hbs
@@ -47,8 +47,14 @@ No completed SOLEs yet
 <hr>
 --}}
 
+
+
 <div class="row">
-	<div class="col s12 offset-m1 m10 offset-l3 l6">
+{{#if roleData.isAdmin}}
+    <div class="col s12 m6">
+    {{else}}
+    <div class="col s12 offset-m1 m10 offset-l3 l6">
+{{/if}}
 		<div class="card-panel">
 			<div class="row center-align">
 			<h3>My questions:</h3>
@@ -68,4 +74,14 @@ No completed SOLEs yet
 			</div>
 		</div>
 	</div>
+    {{#if roleData.isAdmin}}
+        <div class="col s12 m6">
+            <div class="card-panel">
+                <div class="row center-align">
+                    <h3>Administration</h3>
+                    <a href="/dashboard/question-approval?sesh={{sesh}}" class="waves-effect waves-light btn">Question Approval</a>
+                </div>
+            </div>
+        </div>
+    {{/if}}
 </div>
