--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,6 +277,21 @@ main, footer {
     text-overflow: ellipsis;
 }
 
+/*dashboard-question-approval*/
+.tags-collapsible {
+    border: none;
+}
+.tags-collapsible .collapsible-header {
+    padding: 0rem;
+    padding-bottom: 5px;
+    border: none;
+}
+
+.tags-collapsible .collapsible-body {
+    padding: 0rem;
+    border: none;
+}
+
 /* resources */
 
 @media only screen and (max-width:552px) {
