added controller and route to reject a question, updating padding on tags for question approval,

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,6 +278,10 @@ main, footer {
 }
 
 /*dashboard-question-approval*/
+.unapproved-questions .collection-item {
+    padding-right: 72px;
+}
+
 .tags-collapsible {
     border: none;
 }
