threw in a link for dashboard to demo with Jeff

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -80,6 +80,10 @@ No completed SOLEs yet
                 <div class="row center-align">
                     <h3>Administration</h3>
                     <a href="/dashboard/question-approval?sesh={{sesh}}" class="waves-effect waves-light btn">Question Approval</a>
+                    <br><br>
+                    <a href="/dashboard?sesh={{sesh}}" class="waves-effect waves-light btn">Dashboard</a>
+                    <!--<a href="/dashboard/sole-approval?sesh={{sesh}}" class="waves-effect waves-light btn">SOLE-->
+                        <!--Approval</a>-->
                 </div>
             </div>
         </div>
