working feature branch to move My Questions to the sidebar and have a separate view for favorites and mine

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -32,6 +32,7 @@
         <li><a class="waves-effect" href="/soles?sesh={{sesh}}"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="/questions?sesh={{sesh}}"><i class="material-icons">help</i>Explore Questions</a></li>
+        <li><a class="waves-effect" href="/questions/mine?sesh={{sesh}}"><i class="material-icons">question_answer</i>My Questions</a></li>
         <li><a class="waves-effect" href="/questions/add?sesh={{sesh}}"><i class="material-icons">create</i>Add a Question</a></li>
         <li><div class="divider"></div></li>
         {{!-- <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li> --}}
