--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -119,8 +119,7 @@
                         <option value="top.english" {{#contains "top.english" profile.user.subjects}}selected{{/contains}}>English</option>
                         <option value="top.englishlanguagedevelopment" {{#contains "top.englishlanguagedevelopment" profile.user.subjects}}selected{{/contains}}>English Language Development</option>
                         <option value="top.financialliteracy" {{#contains "top.financialliteracy" profile.user.subjects}}selected{{/contains}}>Financial Literacy</option>
-                        <option value="top.foreignlanguage" {{#contains "top.foreignlanguage" profile.user.subjects}}selected{{/contains}}>World Languages
-                        </option>
+                        <option value="top.foreignlanguage" {{#contains "top.foreignlanguage" profile.user.subjects}}selected{{/contains}}>World Languages</option>
                         <option value="top.health" {{#contains "top.health" profile.user.subjects}}selected{{/contains}}>Health</option>
                         <option value="top.libmedia-infolit" {{#contains "top.libmedia-infolit" profile.user.subjects}}selected{{/contains}}>Library Media / Information Literacy</option>
                         <option value="top.lifeskills" {{#contains "top.lifeskills" profile.user.subjects}}selected{{/contains}}>Life Skills</option>
