updated foreign language to world languages in a few more spots

--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -103,7 +103,7 @@
                         <option value="top.english">English</option>
                         <option value="top.englishlanguagedevelopment">English Language Development</option>
                         <option value="top.financialliteracy">Financial Literacy</option>
-                        <option value="top.foreignlanguage">Foreign Language</option>
+                        <option value="top.foreignlanguage">World Languages</option>
                         <option value="top.health">Health</option>
                         <option value="top.libmedia-infolit">Library Media / Information Literacy</option>
                         <option value="top.lifeskills">Life Skills</option>
