--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -119,7 +119,7 @@
                             <option value="top.english" {{#contains "top.english" user.subjects}}selected{{/contains}}>English</option>
                             <option value="top.englishlanguagedevelopment" {{#contains "top.englishlanguagedevelopment" user.subjects}}selected{{/contains}}>English Language Development</option>
                             <option value="top.financialliteracy" {{#contains "top.financialliteracy" user.subjects}}selected{{/contains}}>Financial Literacy</option>
-                            <option value="top.foreignlanguage" {{#contains "top.foreignlanguage" user.subjects}}selected{{/contains}}>Foreign Language</option>
+                            <option value="top.foreignlanguage" {{#contains "top.foreignlanguage" user.subjects}}selected{{/contains}}>World Languages</option>
                             <option value="top.health" {{#contains "top.health" user.subjects}}selected{{/contains}}>Health</option>
                             <option value="top.libmedia-infolit" {{#contains "top.libmedia-infolit" user.subjects}}selected{{/contains}}>Library Media / Information Literacy</option>
                             <option value="top.lifeskills" {{#contains "top.lifeskills" user.subjects}}selected{{/contains}}>Life Skills</option>
